# texteditor

./: .gitignore  CMakeLists.txt  README.md
inc/: custominput.h  dynamicstack.h
src/: custominput.c  dynamicstack.c  main.c
